--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ repositories {
     maven { url "https://maven.google.com" }
 }
 
+def AAVersion = '4.3.1'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -60,6 +61,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-messaging:11.2.0'
     testCompile 'junit:junit:4.12'
+
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
 }
 
 
